<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".ratepain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/pain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:text="@string/ratepain"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnone"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottieone1" />

                    </LinearLayout>
                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/txtone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:text="@string/one"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnTwo"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottietwo" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/two"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnThree"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottiethree" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/three"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnFour"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottiefour" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/four"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnFive"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottiefivee" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtFive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/five"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnSix"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottiesix" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtSix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/six"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnSeven"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottieseven" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtseven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/seven"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnEight"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottieeight" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtEight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/eight"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnNine"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottienine" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtNine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/nine"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnTen"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottieten" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtTen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/ten"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>