<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg4"
    tools:context=".hurtpopupv2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/pain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:text="@string/masakitsaakin"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnUlo"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottieulo" />

                    </LinearLayout>
                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/txtulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:text="@string/ulo"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnPaa"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottiefeet" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtPaa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/paa"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnKamay"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottiekamay" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtKamay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/Kamay"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnNgipin"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottietooth" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtNgipin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/Ngipin"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnMata"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottieeyes" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtMata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/Mata"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnTiyan"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottiehoping" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtTiyan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/Tiyan"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnDibdib"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottiebreathing" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtDibdib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/DIBDIB"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>