<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tulong1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:text="@string/TULONG"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnNeedyourhelsp"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottieneedhelp" />

                    </LinearLayout>
                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/txtTulong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:text="@string/needHelp"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:background="@drawable/round_shape">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btncomfortable"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottiebed" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtNeedHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_vertical|center"
                        android:text="@string/Pwesto"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>


            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>